--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
    <main>
     <header>
-        <h1>titulo do site</h1>
+        <h1>cursos gratis</h1>
     </header>
     <article>
-        <h2>artigo 001</h2>
-        <p>texto artigo 001</p>
+        <h2>curso de html5 com css3</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, optio illo odio architecto excepturi autem esse repellendus sint possimus, porro eveniet corporis nesciunt ratione quae nemo sequi, asperiores dicta facere?</p>
     </article>
     <article>
-        <h2>artigo002</h2>
-        <p>texto artigo 002</p>
+        <h2>curso de javascript</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, maiores fugiat nam itaque expedita, esse quis ut possimus, molestias assumenda natus sapiente dicta. Eligendi tempora, id ullam nemo error cupiditate?</p>
     </article>
    </main> 
 </body>
