--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
    <main>
     <header>
         <h1>cursos gratis</h1>
+        <img src="imagens/curso-em-video-cor.png" alt="">
     </header>
     <article>
         <h2>curso de html5 com css3</h2>
+        <img class="lado" src="imagens/curso-html-css.png" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, optio illo odio architecto excepturi autem esse repellendus sint possimus, porro eveniet corporis nesciunt ratione quae nemo sequi, asperiores dicta facere?</p>
+        <p><a href="curso-html.html">Acesse o curos de html5</a></p>
     </article>
     <article>
         <h2>curso de javascript</h2>
+        <img class="lado" src="imagens/curso-javascript.png" alt="">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum, maiores fugiat nam itaque expedita, esse quis ut possimus, molestias assumenda natus sapiente dicta. Eligendi tempora, id ullam nemo error cupiditate?</p>
+        <p><a href="curso-js.html">acesse o curso de javascript</a></p>
     </article>
    </main> 
 </body>
